fix: lower animation time on mobile

--- a/src/pages/Projects/style.sass
+++ b/src/pages/Projects/style.sass
@@ -57,6 +57,13 @@
       img
         height: 2rem
 
+      &:nth-of-type(2)
+        --animation: slide-fade 1s ease 1.5s forwards
+      
+      &:nth-of-type(3)
+        --animation: slide-fade 1s ease 1.5s forwards
+      
+
     flex-direction: column
 
   .wwwallet
